.provarCaches/00D6C0000000xA6UAI/objects/SSign__SSEnvelope__c.object
<CustomObject>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Active__c</fullName>
        <formula>NOT( ISPICKVAL(SSign__Status__c, &apos;Completed&apos;) || ISPICKVAL(SSign__Status__c, &apos;Completed CAC&apos;) || ISPICKVAL(SSign__Status__c, &apos;Declined&apos;) || ISPICKVAL(SSign__Status__c, &apos;Expired&apos;) || ISPICKVAL(SSign__Status__c, &apos;Voided&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSign__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Core_Version__c</fullName>
        <label>Core Version</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSign__Data2__c</fullName>
        <label>Data2</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data3__c</fullName>
        <label>Data3</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Data4__c</fullName>
        <label>Data4</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSign__DocsInEnvelope__c</fullName>
        <label>Documents in Envelope</label>
        <summaryForeignKey>SSign__SSEnvelope_Document__c.SSign__SSEnvelope__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SSign__Edit_Code__c</fullName>
        <label>Edit Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__First_Email_Attachment_IDs__c</fullName>
        <label>First Email Attachment IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__First_Email_Subject__c</fullName>
        <label>First Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__HashID__c</fullName>
        <externalId>true</externalId>
        <label>HashID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>SSign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__ObjectID15__c</fullName>
        <label>ObjectID15</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__ObjectID18__c</fullName>
        <label>ObjectID18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>S-Sign Envelopes</relationshipLabel>
        <relationshipName>S_Sign_Envelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSign__Related_ObjectID18__c</fullName>
        <label>Related ObjectID18</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Request_Email_Envelope_Documents__c</fullName>
        <label>Request Email Envelope Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Request_Email_Template_ID__c</fullName>
        <label>Request Email Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Resend_Request__c</fullName>
        <formula>&apos;FIELD_IS_DEPRECATED&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resend Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Send_Request__c</fullName>
        <formula>IF(ISPICKVAL(SSign__Status__c, &apos;Created&apos;),HYPERLINK(&quot;/apex/SSIGN__SSCreateEnvelope?action=editProfiles&amp;SDId=&quot; + SSign__Request_Email_Template_ID__c + &quot;&amp;signInPerson=false&amp;SSEId=&quot; + Id,IMAGE( &apos;/img/func_icons/util/mailCloseEnv16.gif&apos;,&apos;Email&apos;),&quot;_blank&quot;),&apos;Sent&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Status__c</fullName>
        <label>Sign Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Voided</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Partially Signed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSign__View_Email_Cover_Page__c</fullName>
        <formula>HYPERLINK( &apos;/apex/SDOC__SDTemplateHTML?Id=&apos; + SSign__Request_Email_Template_ID__c
,IMAGE(&quot;/img/func_icons/util/mailCloseEnv16.gif&quot;,&quot;View&quot;)
,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Email Cover Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSign__Void_Contracts__c</fullName>
        <formula>IF(NOT(ISPICKVAL(SSign__Status__c, &apos;Voided&apos;)), HYPERLINK(&apos;/apex/SSIGN__SSVoidContracts?voidContracts=true&amp;sseId=&apos; +Id, &apos;Void Contracts&apos;, &apos;_self&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Void Contracts</label>
        <type>Text</type>
    </fields>
    <label>S-Sign Envelope</label>
    <listViews>
        <fullName>SSign__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Envelope</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S-Sign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>